# troika

./: MANIFEST.in  README.md  example_report.html  requirements.txt  setup.cfg  setup.py  tasks.py
Troika_TB.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tbrnr/: TBAmr.py  TBrnr.py  logger.py  tbrnr.py  versions.py
tbrnr/templates/: config.yaml  tbamr.smk
tbrnr/tests/: test_tbrnr.py
tbrnr/utils/: collate.py  run_snpit.py
troika/: RunTroika.py  TBAmr.py  __init__.py  logger.py  troika.py
troika-tb/: troika.py
troika-tb/utils/: collate.py  kraken.py  run_iqtree.py  snippy.py  snippy_qc.py  snp_dists.py
troika/reference/: mask.bed
troika/templates/: config.yaml  index.html
troika/tests/: test_tbrnr.py
troika/utils/: collate.py  combine_kraken.py  run_snpit.py  tbamr.smk  troika.smk  write_report.py
troika_tb/: RunTroika.py  __init__.py  troika_tb.py  versions.py
troika_tb/templates/: config.yaml  index.html
troika_tb/utils/: collate.py  combine_kraken.py  combine_seqdata.py  compile.py  kraken.py  mash.py  run_iqtree.py  run_snpit.py  run_tbprofiler.py  snippy.py  snippy_core.py  snippy_qc.py  troika.smk  write_report.py
